freeze/unfreeze jEUR on polygon v3

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bgd-labs/aave-address-book": "^1.17.0",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@testing-library/jest-dom": "^5.14.1",
