--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@web3-onboard/core": "^2.15.2",
+    "@web3-onboard/injected-wallets": "^2.8.0",
     "axios": "^0.27.2",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
